[package]
name = "page_order_filter_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-account-decoder = "1.16.0"
solana-client = "1.14.18"
solana-sdk = "1.14.18"
web3 = "0.17.0"
borsh = "0.10.3"
