[package]
name = "student_intro_program_mint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "=1.16.1"
borsh = {version = "0.10.3"}
thiserror = "1.0.31"
getrandom = { version = "0.2.2", features = ["custom"] }
spl-token = { version="3.5.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version="=1.1.3", features = [ "no-entrypoint" ] }

[lib]
crate-type = ["cdylib", "lib"]
